fix dashboard + activitylog + tenant admin
